a1/brendan_gordon/TEST_PROGRAMS/invalidtype/david_zhou/invalid5.min
# type mismatch

var y: string;

y = -"hello" + 3;
